# aiman

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/app/: mod.rs  routes.rs  transport.rs
src/app/components/skills/: card.rs
src/app/domain/: skill.rs
src/app/infra/: local_fs_repo.rs  manifest_parser.rs  mod.rs  turso_repo.rs
src/app/layouts/: admin_layout.rs
src/app/pages/: apps.rs  mod.rs
src/app/pages/skills/: detail.rs  editor.rs  list.rs  mod.rs  store.rs
src/app/services/: contracts.rs  mod.rs  skill_service.rs  store_service.rs  sync_service.rs
src/app/state/: mod.rs  skills_state.rs
